# nonograms

./: Cargo.toml  README.md  index.scss
src/: app.rs  main.rs  nonogram.rs
